Process most of Latex

--- a/tex2html.ipynb
+++ b/tex2html.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
     "(function() {\n",
     "    window.MathJax = {\n",
     "        tex: {\n",
-    "            inlineMath: [['$', '$'], ['\\\\(', '\\\\)']],\n",
+    "            inlineMath: [['$', '$'], ['\\\\\\\\(', '\\\\\\\\)']],\n",
     "            processEscapes: true,\n",
     "            macros: {\n",
     "                \"R\": \"{\\\\\\\\mathbb{R}}\",\n",
@@ -126,13 +126,32 @@
     "})();\n",
     "</script>\n",
     "<style>\n",
+    "    @import url(\"https://fonts.googleapis.com/css?family=Open+Sans&display=swap\");\n",
     "    body {\n",
     "        max-width: 800px;\n",
     "        margin: 0 auto;\n",
     "        background: lightgrey;\n",
+    "        font-family: \"Open sans\", sans-serif;\n",
+    "        text-align: justify;\n",
     "    }\n",
     "    main {\n",
     "        background: white;\n",
+    "        padding: 1em;\n",
+    "    }\n",
+    "    .remark, .lemma, .proof {\n",
+    "        \n",
+    "    }\n",
+    "    .remark > p:first-of-type::before {\n",
+    "        font-weight: bold;\n",
+    "        content: \"Remark. \";\n",
+    "    }\n",
+    "    .lemma > p:first-of-type::before {\n",
+    "        font-weight: bold;\n",
+    "        content: \"Lemma. \";\n",
+    "    }\n",
+    "    .proof > p:first-of-type::before {\n",
+    "        font-weight: bold;\n",
+    "        content: \"Proof. \";\n",
     "    }\n",
     "</style>\n",
     "'''"
@@ -140,11 +159,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [],
    "source": [
     "_HTML_END = '''\\\n",
+    "</main>\n",
     "</body>\n",
     "</html>\n",
     "'''"
@@ -152,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,11 +217,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _process_document(document: Iterable[str]) -> None:\n",
+    "_HTML_REPLACEMENTS = [\n",
+    "    ('~', ' '),\n",
+    "    ('\\\\qedhere', ''),\n",
+    "]\n",
+    "\n",
+    "def _to_html(text: str) -> str:\n",
+    "    for tex, html in _HTML_REPLACEMENTS:\n",
+    "        text = text.replace(tex, html)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _process_itemize(document: Iterable[str]) -> Iterator[str]:\n",
+    "    yield '<ul>\\n'\n",
+    "    for line in document:\n",
+    "        if line.startswith(r'\\end{itemize}'):\n",
+    "            break\n",
+    "        else:\n",
+    "            yield _to_html(line.replace('\\\\item ', '<li>'))\n",
+    "    yield '</ul>\\n\\n'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _process_document(document: Iterable[str]) -> Iterator[str]:\n",
     "    newline = True\n",
     "    for line in document:\n",
     "        if not line.strip():\n",
@@ -212,16 +265,34 @@
     "            section = re.match(r'\\\\section\\{(.+?)}', line).group(1)\n",
     "            yield f'<h2>{section}</h2>\\n\\n'\n",
     "            newline = True\n",
+    "        elif line.startswith(r'\\begin{itemize}'):\n",
+    "            yield from _process_itemize(document)\n",
+    "        elif line.startswith(r'\\begin{remark}'):\n",
+    "            yield '<div class=\"remark\">\\n'\n",
+    "        elif line.startswith(r'\\end{remark}'):\n",
+    "            yield '</div>\\n\\n'\n",
+    "        elif line.startswith(r'\\begin{lemma}'):\n",
+    "            yield '<div class=\"lemma\">\\n'\n",
+    "        elif line.startswith(r'\\end{lemma}'):\n",
+    "            yield '</div>\\n\\n'\n",
+    "        elif line.startswith(r'\\begin{proof}'):\n",
+    "            yield '<div class=\"proof\">\\n'\n",
+    "        elif line.startswith(r'\\end{proof}'):\n",
+    "            yield '</div>\\n\\n'\n",
+    "        elif line.startswith('\\\\medskip'):\n",
+    "            newline = True\n",
+    "        elif line.startswith(r'\\end{document}'):\n",
+    "            return\n",
     "        else:\n",
     "            if newline:\n",
     "                yield '<p>'\n",
     "                newline = False\n",
-    "            yield line"
+    "            yield _to_html(line)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +301,7 @@
     "    document = dropwhile(_in_preamble, tex_file)\n",
     "    title = _get_title(document)\n",
     "    html_file.write(f'<title>{title}</title>\\n')\n",
-    "    html_file.write('</head>\\n\\n<body>\\n')\n",
+    "    html_file.write('</head>\\n\\n<body>\\n<main>\\n')\n",
     "    html_file.write(f'<h1>{title}</h1>\\n\\n')\n",
     "    html_file.writelines(_process_abstract(document))\n",
     "    html_file.writelines(_process_document(document))\n",
@@ -239,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
