--- a/HHn.tex
+++ b/HHn.tex
@@ -1167,7 +1167,7 @@ This implies that $\g{n}$ becomes a generalized Heisenberg algebra when $r=1$.
 			\end{array}
 		\right),\quad t\in \R,
 	\]
-	which gives $\phi_{*o}(X)=\pi_{*e_{1}r}(e_{2}tr)$, so we may define $J_{X}= rt\operatorname{Id}_{\g{a}\oplus\g{n}}$.
+	which gives $\phi_{*o}(X)=\pi_{*e_{1}r}(e_{2}rt)$, so we may define $J_{X}= rt\operatorname{Id}_{\g{a}\oplus\g{n}}$.
 	This gives us a map $J\colon \g{a}\oplus \g{g}_{2\alpha}\to\operatorname{End}(\g{a}\oplus\g{n})$.
 \end{remark}
 We now define the vectors
