Fixed more typos

--- a/HHn.tex
+++ b/HHn.tex
@@ -1255,7 +1255,7 @@ Therefore,
 		-\frac{4 \lvert X \rvert^{2}}{r^{2}} Y, & v\in u\operatorname{Im}\H.
 	\end{cases}
 \]
-Observe that this yields an alternative computation of the quaternionic sectional curvature of $\H\mathsf{H}^{n}$.
+Observe that this yields an alternative computation of the quaternionic sectional curvature of $\H\mathsf{H}^{n}(r)$.
 Indeed, if $X$ and $Y$ are orthonormal vectors such that $v\in u \operatorname{Im}\H$ (keeping the notation above), we obtain
 \[
 	\operatorname{sec}(X,Y)=\langle R_{Y}X,X \rangle=-\frac{4}{r^{2}},
