--- a/HHn.tex
+++ b/HHn.tex
@@ -1182,24 +1182,24 @@ We now define the vectors
 	\right),\quad
 	X_{1}=\frac{1}{r}\left(
 	\begin{array}{cc|c}
-		i & -i & 0 \\
-		i & -i & 0 \\
+		\mathbf{i} & -\mathbf{i} & 0 \\
+		\mathbf{i} & -\mathbf{i} & 0 \\
 		\hline
 		0 & 0 & 0
 	\end{array}
 	\right),\quad
 	X_{2}=\frac{1}{r}\left(
 	\begin{array}{cc|c}
-		j & -j & 0 \\
-		j & -j & 0 \\
+		\mathbf{j} & -\mathbf{j} & 0 \\
+		\mathbf{j} & -\mathbf{j} & 0 \\
 		\hline
 		0 & 0 & 0
 	\end{array}
 	\right),\quad
 	X_{3}=\frac{1}{r}\left(
 	\begin{array}{cc|c}
-		k & -k & 0 \\
-		k & -k & 0 \\
+		\mathbf{k} & -\mathbf{k} & 0 \\
+		\mathbf{k} & -\mathbf{k} & 0 \\
 		\hline
 		0 & 0 & 0
 	\end{array}
