--- a/tex2html.ipynb
+++ b/tex2html.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,66 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FOLDER = Path()\n",
-    "tex = FOLDER / 'HHn.tex'\n",
-    "html = FOLDER / 'HHn.html'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tex_file = open(tex, encoding='utf-8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def _in_preamble(line: str) -> bool:\n",
-    "    return not line.startswith('\\\\begin{document}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "document = dropwhile(_in_preamble, tex_file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n'"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "next(document)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,6 +86,10 @@
     "        font-weight: bold;\n",
     "        content: \"Remark. \";\n",
     "    }\n",
+    "    .proposition > p:first-of-type::before {\n",
+    "        font-weight: bold;\n",
+    "        content: \"Proposition. \";\n",
+    "    }\n",
     "    .lemma > p:first-of-type::before {\n",
     "        font-weight: bold;\n",
     "        content: \"Lemma. \";\n",
@@ -159,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _in_preamble(line: str) -> bool:\n",
+    "    return not line.startswith('\\\\begin{document}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,11 +172,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "_HTML_REPLACEMENTS = [\n",
+    "    ('\\\\\"a', '&auml;'),\n",
     "    ('~', ' '),\n",
     "    ('\\\\qedhere', ''),\n",
     "]\n",
@@ -234,23 +190,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _process_itemize(document: Iterable[str]) -> Iterator[str]:\n",
-    "    yield '<ul>\\n'\n",
+    "_LIST_TYPE = {'itemize': 'ul', 'enumerate': 'ol'}\n",
+    "\n",
+    "def _process_list(document: Iterable[str], mode: str) -> Iterator[str]:\n",
+    "    yield f'<{_LIST_TYPE[mode]}>\\n'\n",
     "    for line in document:\n",
-    "        if line.startswith(r'\\end{itemize}'):\n",
+    "        if line.startswith(f'\\\\end{{{mode}}}'):\n",
     "            break\n",
     "        else:\n",
     "            yield _to_html(line.replace('\\\\item ', '<li>'))\n",
-    "    yield '</ul>\\n\\n'"
+    "    yield f'</{_LIST_TYPE[mode]}>\\n\\n'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _process_bibliography(document: Iterable[str]) -> Iterator[str]:\n",
+    "    for line in document:\n",
+    "        if line.startswith(r'\\end{thebibliography}'):\n",
+    "            break\n",
+    "        # TO DO: Process items\n",
+    "    yield from ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +238,11 @@
     "            yield f'<h2>{section}</h2>\\n\\n'\n",
     "            newline = True\n",
     "        elif line.startswith(r'\\begin{itemize}'):\n",
-    "            yield from _process_itemize(document)\n",
+    "            yield from _process_list(document, 'itemize')\n",
+    "        elif line.startswith(r'\\begin{enumerate}'):\n",
+    "            yield from _process_list(document, 'enumerate')\n",
+    "        elif line.startswith(r'\\begin{thebibliography}'):\n",
+    "            yield from _process_bibliography(document)\n",
     "        elif line.startswith(r'\\begin{remark}'):\n",
     "            yield '<div class=\"remark\">\\n'\n",
     "        elif line.startswith(r'\\end{remark}'):\n",
@@ -274,6 +250,10 @@
     "        elif line.startswith(r'\\begin{lemma}'):\n",
     "            yield '<div class=\"lemma\">\\n'\n",
     "        elif line.startswith(r'\\end{lemma}'):\n",
+    "            yield '</div>\\n\\n'\n",
+    "        elif line.startswith(r'\\begin{proposition}'):\n",
+    "            yield '<div class=\"proposition\">\\n'\n",
+    "        elif line.startswith(r'\\end{proposition}'):\n",
     "            yield '</div>\\n\\n'\n",
     "        elif line.startswith(r'\\begin{proof}'):\n",
     "            yield '<div class=\"proof\">\\n'\n",
@@ -292,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,10 +304,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "FOLDER = Path()\n",
+    "tex = FOLDER / 'HHn.tex'\n",
+    "html = FOLDER / 'HHn.html'\n",
     "tex_to_html(tex, html)"
    ]
   },
